# tiny-browser-agent

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  TODO.md  config.yaml  main.py  plan.md  problems.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
desktop/: package-lock.json  package.json  tsconfig.json
desktop/src/: backendClient.ts  browserCommandServer.test.ts  browserCommandServer.ts  browserSurfaceCapture.ts  browserSurfaceManager.test.ts  browserSurfaceManager.ts  browserSurfacePopups.ts  config.ts  focusShortcuts.test.ts  focusShortcuts.ts  main.ts  mainLifecycle.test.ts  mainLifecycle.ts  packageScripts.test.ts  preload.ts  python.ts  pythonBridgeClient.ts  windowConfig.test.ts  windowConfig.ts
scripts/: run-BE.sh  run.sh
src/: action_metadata.py  action_review.py  action_step_summarizer.py  agent.py  browser_actions.py  config.py  session.py  tool_calling.py  tool_executor.py
src/agents/: actor_agent.py  planner_agent.py  post_summary_agent.py  types.py
src/browser/: __init__.py  actions.py  state.py  (+4 more)
tests/: test_action_step_summarizer.py  test_agent.py  test_ambiguity_detector.py  test_aria_snapshot.py  test_browser_state.py  test_config_defaults.py  test_desktop_bridge.py  test_electron_surface.py  test_llm_client.py  test_main.py  test_planner_agent.py  test_playwright_logging.py  test_playwright_upload.py  test_semantic_tools.py  test_session.py  test_state_graph.py  test_tool_calling.py  test_ui.py  test_ui_panel.py
web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
(+119 files in other folders)
