[project]
name = "computer-use-preview"
version = "0.1.0"
description = "Google Computer Use Preview example agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "browserbase==1.4.0",
    "fastapi>=0.115.0,<1.0.0",
    "google-genai>=1.40.0",
    "playwright==1.55.0",
    "pydantic==2.12.0",
    "rich",
    "termcolor==3.1.0",
    "uvicorn>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.pyright]
extraPaths = ["src", "."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
